Sat Jan 11 16:36:01 2003  Tim Janik  <timj@gtk.org>

	* docs/generated/Makefile.am (site-update-con): transmit site
	contents in bzip2 compressed tarball which is much smaller than
	the gzip variant (not so for the images and navigation tarballs
	though). added beast-site-*.tar.bz2 to clean targets.

Sat Jan 11 16:04:18 2003  Tim Janik  <timj@gtk.org>

	* docs/Makefile.am: removed website related files from EXTRA_DIST,
	as we don't plan to release the website with tarballs ;)
	
	* docs/generated/Makefile.am: send css stuff along with website
	updates. simplified and broadened clean rules. watch your *.ps,
	*.pdf, *.xml, *.html and beast-site-*.tar.gz files, make clean
	will wipe them all. introduced site-upgrade rule which does
	a complete upgrade of beast.gtk.org to CVS contents, while
	site-update only transmits frequently altered docs.
	
	* docs/generated/css: new directory, containing site related
	CSS stuff.

	* docs/generated/css/default.css: Default CSS file for the BEAST
	website from Alper Ersoy.

	* docs/generated/css/images: new directory, containing site related
	CSS images.

	* docs/generated/css/images/*.png: added images from Alper Ersoy
	for default.css.

Sat Jan 11 15:21:08 2003  Tim Janik  <timj@gtk.org>

	* docs/generated/log2texi.sh: use SYMBOL_GLIB to match GLib
	types, so we don't incedentally markup words like 'GUI'.
	added word boundary constrains to CONST?_EXPR to avoid digit
	markup for words like '24bit'.

Sat Jan 11 00:47:27 2003  Tim Janik  <timj@gtk.org>

	* changed logfile to logentry in alpers last patch to better
	identify the markup purpose.

Fri Jan 10 12:15:40 2003  Alper Ersoy <dirt@gtk.org>

	* docs/teximacros.texi: added @logfile macro.

	* docs/generated/html.xsl:
	* docs/generated/man.xsl:
	* docs/generated/markup.xsl:  added markup for @logfile macro.

	* docs/generated/log2texi.sh: mapped matched filenames to @logfile
	macro, changed process substitution with tmpfile usage when applying
	texi templates.
